small changes in currency classes

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
                 <select class="form__select js-selectedCurrency" name="convertTo">
                   <option value="">wybierz walutę </option>
-                  <option value="chf">CHF - Frank szwajcarski</option>
-                  <option value="eur">EUR - Euro </option>
-                  <option value="gbp">GBP - Brytyjski funt szterling </option>
+                  <option value="CHF">CHF - Frank szwajcarski</option>
+                  <option value="EUR">EUR - Euro </option>
+                  <option value="GBP">GBP - Brytyjski funt szterling </option>
                 </select>
             </label>
           </p> 
