pattern class added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     rel="stylesheet">
 </head>
 
-<body class="body element">
+<body class="body pattern">
   <main>
 
     <!-- currency converter - version 1 - converts PLN into other currencies based on the default exchange rate -->
